styles/style.css
* {
  margin: 0px;
  padding: 0px;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
  overflow: scroll;
}

::-webkit-scrollbar {
  width: 0px;
  height: 0px;
  background: transparent;
  /* make scrollbar transparent */
}

.topbar {
  position: fixed;
  top: 0vh;
  left: 0vh;
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -ms-flex-wrap: nowrap;
      flex-wrap: nowrap;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  max-height: 5vh;
  min-height: 5vh;
  padding-left: 2vw;
  background-color: #002d72;
  font-family: "Montserrat", sans-serif;
  z-index: 3;
  border-bottom: 5px solid white;
}

.logo {
  top: 0vh;
  left: 0vh;
  color: white;
  text-transform: capitalize;
  letter-spacing: 0.15rem;
  font-size: 1.5rem;
  text-decoration: none;
}

.burger {
  display: none;
  cursor: pointer;
  -webkit-box-align: right;
      -ms-flex-align: right;
          align-items: right;
  padding-right: 4.5vh;
  width: 3vh;
}

.burger div {
  -webkit-box-pack: right;
      -ms-flex-pack: right;
          justify-content: right;
  width: 3vh;
  height: calc(3vh / 8);
  margin: calc(3vh / 5);
  background-color: white;
  -webkit-transition: all 0.5s ease;
  transition: all 0.5s ease;
}

nav {
  float: left;
  top: 5vh;
  left: 0vh;
  bottom: -5vh;
  width: 250px;
  height: 95%;
  background: #002d72;
  border-right: 5px solid white;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: end;
      -ms-flex-align: end;
          align-items: flex-end;
  -webkit-box-pack: start;
      -ms-flex-pack: start;
          justify-content: flex-start;
  padding-top: 40px;
  padding-right: 8px;
  z-index: 2;
  position: fixed;
  overflow-y: auto;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

/* Hide scrollbar for Chrome, Safari and Opera */
nav::-webkit-scrollbar {
  display: none;
}

nav a {
  -webkit-animation: 1s slideInFromLeft;
          animation: 1s slideInFromLeft;
  display: inline-block;
  text-decoration: none;
  letter-spacing: 0.1rem;
  font-size: 0.8rem;
  color: #c7c7c7;
  text-transform: capitalize;
  font-family: "Montserrat", sans-serif;
  font-weight: 500;
  padding: 5px 5px;
  text-align: right;
}

nav a:hover {
  color: white;
  font-size: 1.1rem;
}

.mainheading {
  font-size: 1.3rem;
  font-weight: 700rem;
  color: white;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: end;
      -ms-flex-align: end;
          align-items: flex-end;
  width: 200px;
  padding-top: 50px;
  border-bottom: 4px solid currentColor;
}

.subheading {
  width: 250px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: end;
      -ms-flex-align: end;
          align-items: flex-end;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  padding-bottom: 50px;
}

.subheading a {
  font-size: 0.9rem;
}

.main-body {
  padding-left: 250px;
  margin-left: auto;
  margin-top: 5vh;
  margin: 0 auto;
  padding-right: 5px;
  height: 100vh;
}

.background_ {
  background: #e2e2d0;
  opacity: 0.6;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  background-image: url(../images/Project_JHH_01-2880x1200.jpg);
  max-width: 100%;
  height: 100vh;
  padding: 100px;
  background-size: cover;
  background-position: top right;
  border-bottom: 5px solid white;
  background-attachment: fixed;
}

.JHH-logo {
  opacity: 1;
  position: absolute;
  top: 10vh;
  right: 5vh;
  width: 40vh;
  opacity: 1;
}

.LCICM-logo {
  opacity: 1;
  position: absolute;
  top: 10vh;
  left: 5vh;
  width: auto;
  opacity: 1;
  height: auto;
  /* Magic! */
  max-width: 5vw;
}

/* Container holding the image and the text */
.header_image {
  position: relative;
}

/* Bottom right text */
.title {
  position: absolute;
  text-align: center;
  width: 95%;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 5px;
  padding-right: 5px;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  background-color: rgba(0, 0, 0, 0.2);
  text-shadow: 0 0 1px grey, 0 0 1px grey, 0 0 1px grey, 0 0 1px grey;
  color: white;
  font-family: "Montserrat", sans-serif;
  letter-spacing: 0.2rem;
  font-size: 2vw;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
}

.img-description {
  position: absolute;
  text-align: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 5px;
  padding-right: 5px;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  background-color: rgba(79, 79, 79, 0.8);
  color: silver;
  font-family: "Roboto", sans-serif;
  letter-spacing: 0.1rem;
  font-size: 1.2vw;
  bottom: 1.5vh;
  right: 0vh;
}
/* ... */

